fixed some layout issues

--- a/assets/css/Contact_Style.css
+++ b/assets/css/Contact_Style.css
@@ -30,7 +30,7 @@ h1 {
     background-color: #4aaaa5;
     float: left;
     height: 100%;
-    transform: translate(50%,0%);
+    transform: translate(100%,0%);
     display: table;
     padding-left: 10px;
     padding-right: 10px;
@@ -56,6 +56,7 @@ a:not(:last-child) {
         margin-right: 120px;
         margin-top: 2.8vh;
         vertical-align: middle;
+        transform: translate(-60%,0%);
 }
 
 main {
