--- a/assets/css/Index_style.css
+++ b/assets/css/Index_style.css
@@ -31,7 +31,7 @@ h1 {
     background-color: #4aaaa5;
     float: left;
     height: 100%;
-    transform: translate(50%,0%);
+    transform: translate(100%,0%);
     display: table;
     padding-left: 10px;
     padding-right: 10px;
@@ -57,6 +57,7 @@ a:not(:last-child) {
         margin-right: 120px;
         margin-top: 2.8vh;
         vertical-align: middle;
+        transform: translate(-60%,0%);
 }
 main {
     min-height: 85vh;
@@ -68,13 +69,14 @@ main {
 .container {
     display: table;
     MIN-height: 500px;
-    max-width: 960px;
+    width: 960px;
     border: 1px;
     margin-left: 30%;
     margin-top: 20px;
     margin-right: 20%;
     background-color: #ffffff;
     padding-right: 20px;
+    transform: translate(-180px,0px);
 }
 
 .about {
