--- a/assets/css/Portfolio_Style.css
+++ b/assets/css/Portfolio_Style.css
@@ -31,7 +31,7 @@ h1 {
     background-color: #4aaaa5;
     float: left;
     height: 100%;
-    transform: translate(50%,0%);
+    transform: translate(100%,0%);
     display: table;
     padding-left: 10px;
     padding-right: 10px;
@@ -57,31 +57,45 @@ a:not(:last-child) {
         margin-right: 120px;
         margin-top: 2.8vh;
         vertical-align: middle;
+        transform: translate(-60%,0%);
+}
+
+main {
+    min-height: 85vh;
+    background-image: cover;
+    width: 100%;
+    position: relative;
+    
 }
 
 .main {
-    min-height: 900px;
-    background-image: cover;
+    display: table;
+    height: 130vh;
     width: 960px;
-    position: relative;
-    background-color: white;
-    transform: translate(300px,0%);
-
-     
+    border: 1px;
+    margin-left: 30%;
+    margin-top: 10px;
+    margin-right: 20%;
+    background-color: #ffffff;
+    padding-right: 20px;
+    transform: translate(-180px,0px);
 }
 
-.h2 {
+.title {
     display: table;
-    position: relative;
-    background-color: none;
-    color: #4aaaa5;
-    font-size: 2em;
-    width: 95%;
-    border-bottom: #777777 solid;
+    color: white;
+    border-bottom:solid #777777;
+    padding-left: 20px;
+    height: 5vh;
+    width: 98%;
     padding: 20px;
 
 }
 
+h2 {
+    color: #4aaaa5;
+    vertical-align: middle;
+}
 
 
 img {
@@ -121,7 +135,9 @@ img {
     font-size: 1em;
     top: 50%;
     margin:0;
-    padding:0:
+    padding-top: 10%;
+    font-size: 18px;
+    
 }
 
 h4 {
